changes due to deprecated support for old ways of auto boxing/unboxing